ocl-cfg: improved kernel configuration management and documentation (#468)
* Conditionally define atomic_add_global_cmpxchg and atomic_add_global_xchg.
* Removed sentence marks to allow better copy&paste from console output (tune_multiply.py).
* acc_bench_smm: support reading command line arguments from an input file
  Note: can overcome slow device initialization (aka PM=DISABLED).
* acc_bench_*: Fixed condition to bail out in case no device was found.
* Use parameter file (if it exists) according to WITH_GPU (CMake, Makefile).
* Introduced OPENCL_LIBSMM_DEVMATCH to match tuned parameter-set per device name.
* Allow any set of tuned parameters to be taken after match failed.
  Note: driver change can cause device rename.
* Added script to list environment variables supported by OpenCL BE and LIBSMM.
* Introduced and implemented ACC_OPENCL_DUMP (c_dbcsr_acc_opencl_dump).
* Improved static analysis during development (Makefile).
* Introduced SHARED_A (independent of !PRIVATE_A).
* Call libsmm_acc_finalize if __DBCSR_ACC is not defined.
* Call libxsmm_init/libxsmm_finalize privately (LIBSMM).
* Adjusted condition to avoid multiple BE-initialization.
* Documentation: note about GPU mode on Nvidia GPUs.
  Improved wrt auto-tuning.
* Increased timeout from 900 to 1200 seconds (Daint-CI).
* Updated LIBXSMM (Daint-CI).

--- a/opencl/Makefile
+++ b/opencl/Makefile
@@ -15,6 +15,10 @@ UNAME := $(shell uname)
 INTEL ?= 0
 DEV ?= 0
 
+PARAMS_WITHGPU := smm/params/tune_multiply_$(WITH_GPU).csv
+PARAMS_DEFAULT := smm/tune_multiply.csv
+PARAMS := $(if $(wildcard $(PARAMS_WITHGPU)),$(PARAMS_WITHGPU),$(PARAMS_DEFAULT))
+
 CFLAGS := -fPIC \
   -Wall -Wextra -pedantic \
   -Wno-overlength-strings \
@@ -52,8 +56,8 @@ ifneq (0,$(DEV))
     CFLAGS += -Wno-unused-parameter
   else ifeq (clang,$(CC))
     #LDFLAGS := --analyze $(LDFLAGS)
-    CFLAGS := --analyze $(CFLAGS)
-    CC := clang++
+    CFLAGS := --analyze -Wno-deprecated $(CFLAGS)
+    override CC := clang++
   else
     CC := $(CXX)
   endif
@@ -127,7 +131,7 @@ bench: ../acc_bench_smm ../acc_bench_trans
 test: ../dbcsr_acc_test
 
 smm/opencl_kernels.h: acc_opencl.sh $(KERNEL)
-	./acc_opencl.sh $(KERNEL) smm/tune_multiply.csv $@
+	./acc_opencl.sh $(KERNEL) $(PARAMS) $@
 
 ../dbcsr_acc.a: $(OBJACC)
 	$(AR) -rs $@ $^
