--- a/opencl/Makefile
+++ b/opencl/Makefile
@@ -1,15 +1,19 @@
-INCACC := $(wildcard *.h*) ../acc.h
-SRCACC := $(wildcard *.c)
+MAKDIR := $(subst //,,$(dir $(firstword $(MAKEFILE_LIST)))/)
+INCACC := $(wildcard $(MAKDIR)/*.h*) $(MAKDIR)/../acc.h
+SRCACC := $(wildcard $(MAKDIR)/*.c)
 OBJACC := $(SRCACC:.c=.o)
 
-INCSMM := $(wildcard smm/*.h*) smm/opencl_kernels.h ../acc_libsmm.h
-SRCSMM := $(wildcard smm/*.c)
+INCSMM := $(wildcard $(MAKDIR)/smm/*.h*) \
+                     $(MAKDIR)/smm/opencl_kernels.h \
+                     $(MAKDIR)/../acc_libsmm.h \
+                     $(NULL)
+SRCSMM := $(wildcard $(MAKDIR)/smm/*.c)
 OBJSMM := $(SRCSMM:.c=.o)
-KERNEL := $(wildcard smm/kernels/*.cl)
+KERNEL := $(wildcard $(MAKDIR)/smm/kernels/*.cl)
 
 INCALL := $(INCACC) $(INCSMM)
 
-LIBXSMMROOT := $(wildcard ../../../../libxsmm)
+LIBXSMMROOT := $(wildcard $(MAKDIR)/../../../../libxsmm)
 ifeq (,$(LIBXSMMROOT))
   LIBXSMMROOT := $(wildcard $(HOME)/libxsmm)
 endif
@@ -17,8 +21,23 @@ UNAME := $(shell uname)
 INTEL ?= 0
 DEV ?= 0
 
-PARAMS_WITHGPU := smm/params/tune_multiply_$(WITH_GPU).csv
-PARAMS_DEFAULT := smm/tune_multiply.csv
+# select from set of predefined triplet specifications
+SPECID ?= 0
+# limit shape in tests (zero or negative for unlimited)
+MAXEXT ?= 48
+# number of tests (zero or negative for unlimited)
+NTRANS ?= 10
+NSMMS ?= 10
+
+COMMAND := $(shell which command 2>/dev/null)
+ifneq (,$(COMMAND))
+  which = $(shell $(COMMAND) -v $1)
+else
+  which = $(shell which $(firstword $1) 2>/dev/null)
+endif
+
+PARAMS_WITHGPU := $(MAKDIR)/smm/params/tune_multiply_$(WITH_GPU).csv
+PARAMS_DEFAULT := $(MAKDIR)/smm/tune_multiply.csv
 PARAMS := $(if $(wildcard $(PARAMS_WITHGPU)),$(PARAMS_WITHGPU),$(PARAMS_DEFAULT))
 
 CFLAGS := -fPIC \
@@ -68,7 +87,7 @@ else
 endif
 
 ifneq (0,$(DBG))
-  CPPFLAGS += -CC
+  CPP_OPENCL_FLAGS += -C
   ifeq (,$(DBG))
     CFLAGS += -O2
   else
@@ -97,13 +116,19 @@ ifneq (0,$(OMP))
     LDFLAGS += -lomp
   endif
   ifneq (,$(LIBXSMMROOT))
-    LDFLAGS := -pthread $(LDFLAGS) -L$(LIBXSMMROOT)/lib -lxsmmext -lxsmm -lxsmmnoblas -ldl -lm
-    CFLAGS += -pthread -D__LIBXSMM -I$(LIBXSMMROOT)/include
+    LDFLAGS += -lxsmmext -lxsmm -lxsmmnoblas -ldl -lm
   endif
 else
   ifneq (,$(LIBXSMMROOT))
-    LDFLAGS := -pthread $(LDFLAGS) -L$(LIBXSMMROOT)/lib -lxsmm -lxsmmnoblas -ldl -lm
-    CFLAGS += -pthread -D__LIBXSMM -I$(LIBXSMMROOT)/include
+    LDFLAGS += -lxsmm -lxsmmnoblas -ldl -lm
+  endif
+endif
+ifneq (,$(LIBXSMMROOT))
+  CFLAGS_XSMM += -pthread -D__LIBXSMM -I$(LIBXSMMROOT)/include
+  LDFLAGS := -pthread $(LDFLAGS)
+  LDFLAGS += -L$(LIBXSMMROOT)/lib
+  ifneq (Darwin,$(UNAME))
+    LDFLAGS += -Wl,-rpath=$(LIBXSMMROOT)/lib $(LDFLAGS)
   endif
 endif
 
@@ -114,64 +139,125 @@ else
     CUDATOOLKIT_HOME := $(NVSDKCOMPUTE_ROOT)
   endif
   ifeq (,$(CUDATOOLKIT_HOME))
-    NVCC := $(shell which nvcc 2>/dev/null)
+    NVCC := $(call which,nvcc)
     CUDATOOLKIT_HOME := $(if $(NVCC),$(abspath $(dir $(NVCC))/..))
   endif
   ifneq (,$(CUDATOOLKIT_HOME))
     CFLAGS += -I$(CUDATOOLKIT_HOME)/include
-    LDFLAGS += -L$(CUDATOOLKIT_HOME)/lib64
+    ifeq (,$(wildcard $(LIBOPENCL)))
+      LDFLAGS += -L$(CUDATOOLKIT_HOME)/lib64
+      LDFLAGS += -Wl,-rpath=$(CUDATOOLKIT_HOME)/lib64
+    endif
   endif
-  ifneq (,$(wildcard $(LIBOPENCL)))
-    LDFLAGS += $(LIBOPENCL)
-  else
+  ifeq (,$(wildcard $(LIBOPENCL)))
     LDFLAGS += -lOpenCL
+  else
+    LDFLAGS += $(LIBOPENCL)
   endif
 endif
 
+CXXLIBDIR := $(dir $(call which,$(CXX)))/../lib64
+ifneq (,$(wildcard $(CXXLIBDIR)))
+  LDFLAGS += -Wl,-rpath=$(abspath $(CXXLIBDIR))
+endif
+
 .PHONY: bench
-bench: ../acc_bench_smm ../acc_bench_trans
+bench: $(MAKDIR)/../acc_bench_smm $(MAKDIR)/../acc_bench_trans
 
 .PHONY: all
-all: ../dbcsr_acc.a ../dbcsr_acc_smm.a bench test
+all: $(MAKDIR)/../dbcsr_acc.a $(MAKDIR)/../dbcsr_acc_smm.a bench test
 
 .PHONY: test
-test: ../dbcsr_acc_test
+test: test-interface test-trans test-smm
 
-smm/opencl_kernels.h: acc_opencl.sh $(KERNEL)
-	CPPFLAGS=$(CPPFLAGS) ./acc_opencl.sh $(KERNEL) $(PARAMS) $@
+.PHONY: test-interface
+test-interface: $(MAKDIR)/../dbcsr_acc_test
+	@echo "--- DBCSR Backend Interface"
+	$(MAKDIR)/../dbcsr_acc_test
 
-../dbcsr_acc.a: $(OBJACC)
+.PHONY: test-trans
+test-trans: bench
+	$(eval SHAPES = $(shell $(MAKDIR)/../acc_triplets.sh -l -s $(SPECID) -m $(MAXEXT) -n $(NTRANS) -a))
+	@echo "--- DBCSR OpenCL Transposes ($(words $(SHAPES)))"
+	@ACC_OPENCL_VERBOSE=1 CHECK=0 $(MAKDIR)/../acc_bench_trans 2>&1 >/dev/null
+	@echo "runtime libraries:"
+	@ldd $(MAKDIR)/../acc_bench_trans
+	@echo "hostname: $$(hostname)"
+	@echo
+	@for SHAPE in $(SHAPES); do \
+		$(MAKDIR)/../acc_bench_trans $${SHAPE} || exit 1; \
+		echo; \
+	done
+
+$(MAKDIR)/test-smm.log: bench
+	@echo "--- DBCSR OpenCL SMMs"
+	@ACC_OPENCL_VERBOSE=1 CHECK=0 $(MAKDIR)/../acc_bench_smm 2>&1 >/dev/null
+	@echo "runtime libraries:"
+	@ldd $(MAKDIR)/../acc_bench_smm
+	@echo "hostname: $$(hostname)"
+	@echo
+	@$(MAKDIR)/../acc_triplets.sh -l -s $(SPECID) -m $(MAXEXT) -n $(NSMMS) | \
+		(CHECK=1 stdbuf --output=L $(MAKDIR)/../acc_bench_smm /dev/stdin \
+			2>$(MAKDIR)/test-smm.err && rm $(MAKDIR)/test-smm.err) | tee $@
+	@if [ -s $(MAKDIR)/test-smm.err ]; then cat $(MAKDIR)/test-smm.err && exit 1; fi
+
+.PHONY: test-smm
+test-smm: $(MAKDIR)/test-smm.log
+ifneq (,$(call which,datamash))
+ifeq (,$(shell datamash geomean 2>&1 | grep invalid))
+	@echo "geomean: $$(sed -n "/device:/p" $< | datamash -W -R 1 geomean 4) GFLOPS/s"
+endif
+	@echo "median: $$(sed -n "/device:/p" $< | datamash -W -R 1 median 4) GFLOPS/s"
+	@echo "mean: $$(sed -n "/device:/p" $< | datamash -W -R 1 mean 4) GFLOPS/s"
+endif
+
+$(MAKDIR)/smm/opencl_kernels.h: $(MAKDIR)/acc_opencl.sh $(KERNEL)
+	@CPPFLAGS=$(CPP_OPENCL_FLAGS) $(MAKDIR)/acc_opencl.sh $(KERNEL) $(PARAMS) $@
+
+$(MAKDIR)/../dbcsr_acc.a: $(OBJACC)
 	$(AR) -rs $@ $^
 
-../dbcsr_acc_smm.a: $(OBJSMM)
+$(MAKDIR)/../dbcsr_acc_smm.a: $(OBJSMM)
 	$(AR) -rs $@ $^
 
-%.o: %.c $(INCALL) Makefile
-	$(CC) $(CFLAGS) -c $< -o $@
+%.o: %.c $(INCALL) $(MAKDIR)/Makefile
+	$(CC) $(CFLAGS) $(CFLAGS_XSMM) -c $< -o $@
 
-acc_bench_smm.o: ../acc_bench_smm.c Makefile
+$(MAKDIR)/acc_bench_smm.o: $(MAKDIR)/../acc_bench_smm.c $(MAKDIR)/Makefile
+ifneq (0,$(LIBXSMM))
+	$(CC) $(CFLAGS) $(CFLAGS_XSMM) -c $< -o $@
+else
 	$(CC) $(CFLAGS) -c $< -o $@
-../acc_bench_smm: acc_bench_smm.o ../dbcsr_acc_smm.a ../dbcsr_acc.a
+endif
+$(MAKDIR)/../acc_bench_smm: $(MAKDIR)/acc_bench_smm.o $(MAKDIR)/../dbcsr_acc_smm.a $(MAKDIR)/../dbcsr_acc.a
 	$(CC) $^ $(LDFLAGS) -o $@
 
-acc_bench_trans.o: ../acc_bench_trans.c Makefile
+$(MAKDIR)/acc_bench_trans.o: $(MAKDIR)/../acc_bench_trans.c $(MAKDIR)/Makefile
+ifneq (0,$(LIBXSMM))
+	$(CC) $(CFLAGS) $(CFLAGS_XSMM) -c $< -o $@
+else
 	$(CC) $(CFLAGS) -c $< -o $@
-../acc_bench_trans: acc_bench_trans.o ../dbcsr_acc_smm.a ../dbcsr_acc.a
+endif
+$(MAKDIR)/../acc_bench_trans: $(MAKDIR)/acc_bench_trans.o $(MAKDIR)/../dbcsr_acc_smm.a $(MAKDIR)/../dbcsr_acc.a
 	$(CC) $^ $(LDFLAGS) -o $@
 
-dbcsr_acc_test.o: ../../../tests/dbcsr_acc_test.c Makefile
-	$(CC) $(CFLAGS) -I../.. -c $< -o $@
-../dbcsr_acc_test: dbcsr_acc_test.o ../dbcsr_acc.a
+$(MAKDIR)/dbcsr_acc_test.o: $(MAKDIR)/../../../tests/dbcsr_acc_test.c $(MAKDIR)/Makefile
+	$(CC) $(CFLAGS) -I$(MAKDIR)/../.. -c $< -o $@
+$(MAKDIR)/../dbcsr_acc_test: $(MAKDIR)/dbcsr_acc_test.o $(MAKDIR)/../dbcsr_acc.a
 	$(CC) $^ $(LDFLAGS) -o $@
 
 .PHONY: clean
 clean:
 	@rm -f $(OBJACC) $(OBJSMM)
-	@rm -f acc_bench_smm.o acc_bench_trans.o dbcsr_acc_test.o
-	@rm -f smm/opencl_kernels.h
+	@rm -f $(MAKDIR)/dbcsr_acc_test.o
+	@rm -f $(MAKDIR)/acc_bench_trans.o
+	@rm -f $(MAKDIR)/acc_bench_smm.o
+	@rm -f $(MAKDIR)/smm/opencl_kernels.h
+	@rm -f $(MAKDIR)/test-smm.err
 
 .PHONY: realclean
 realclean: clean
-	@rm -f ../dbcsr_acc.a ../dbcsr_acc_smm.a
-	@rm -f ../acc_bench_smm ../acc_bench_trans
-	@rm -f ../dbcsr_acc_test
+	@rm -f $(MAKDIR)/../dbcsr_acc.a $(MAKDIR)/../dbcsr_acc_smm.a
+	@rm -f $(MAKDIR)/../acc_bench_smm $(MAKDIR)/../acc_bench_trans
+	@rm -f $(MAKDIR)/../dbcsr_acc_test
+	@rm -f $(MAKDIR)/test-smm.log
