Improved specifying GPU target and code/format cleanup (#597)
* Introduced "A100" target for CUDA/HIP mapping to best compile-target.
* CUDA/HIP "A100" target falls back to parameters tuned for V100.
* Separate defaults for CUDA/HIP and OpenCL (WITH_GPU).
* Only pass existing file (OpenCL SMM parameters).
* Avoid including unused header file.
* Cleanup clang-format-fypp.sh.

--- a/opencl/smm/CMakeLists.txt
+++ b/opencl/smm/CMakeLists.txt
@@ -10,7 +10,7 @@ set(SMM_ACC_PARAMS_DEFAULT ${CMAKE_CURRENT_SOURCE_DIR}/tune_multiply.csv)
 
 if (EXISTS ${SMM_ACC_PARAMS_WITHGPU})
   set(SMM_ACC_PARAMS ${SMM_ACC_PARAMS_WITHGPU})
-else ()
+elseif (EXISTS ${SMM_ACC_PARAMS_DEFAULT})
   set(SMM_ACC_PARAMS ${SMM_ACC_PARAMS_DEFAULT})
 endif ()
 
