ocl: wrapper script to schedule an input file to multiple devices (#620)
* Limit number of parallel tasks (and ovoid oversubscribing GPUs).
* Introduced an option permitting multi-device tests (Makefile).
* Aggregated output into one locked section (acc_bench_smm).

--- a/opencl/Makefile
+++ b/opencl/Makefile
@@ -31,6 +31,13 @@ MAXEXT ?= 48
 NTRANS ?= 10
 NSMMS ?= 10
 
+MULTI ?= 0
+ifneq (0,$(MULTI))
+  ACC_BENCH_SMM := $(ACCDIR)/acc_bench_smm.sh
+else
+  ACC_BENCH_SMM := $(ACCDIR)/acc_bench_smm
+endif
+
 COMMAND := $(shell which command 2>/dev/null)
 ifneq (,$(COMMAND))
   which = $(shell $(COMMAND) -v $1)
@@ -192,7 +199,7 @@ test-interface: $(ACCDIR)/dbcsr_acc_test
 .PHONY: test-trans
 test-trans: bench
 	$(eval SHAPES = $(shell $(ACCDIR)/acc_triplets.sh -k $(SPECID) -m $(MAXEXT) -n $(NTRANS) -a))
-	$(eval DEVICE = $(shell ACC_OPENCL_VERBOSE=1 CHECK=0 $(ACCDIR)/acc_bench_smm 1 1 1 2>&1 >/dev/null))
+	$(eval DEVICE = $(shell ACC_OPENCL_VERBOSE=1 CHECK=0 $(ACCDIR)/acc_bench_trans 1 1 1 2>&1 >/dev/null))
 	@echo "--- DBCSR OpenCL Transposes ($(words $(SHAPES)))"
 	@echo "$(DEVICE)"
 	@echo "LD_LIBRARY_PATH=${LD_LIBRARY_PATH}"
@@ -228,7 +235,7 @@ endif
 	@echo "hostname: $$(hostname)"
 	@echo
 	@echo "$(SHAPES)" | xargs -n1 | \
-		($(GPUENV) CHECK=$(if $(CHECK),$(CHECK),1) stdbuf --output=L $(ACCDIR)/acc_bench_smm /dev/stdin \
+		($(GPUENV) CHECK=$(if $(CHECK),$(CHECK),1) stdbuf --output=L $(ACC_BENCH_SMM) /dev/stdin \
 			2>$(MAKDIR)/test-smm.err && rm $(MAKDIR)/test-smm.err) | tee $@
 	@if [ -s $(MAKDIR)/test-smm.err ]; then cat $(MAKDIR)/test-smm.err && exit 1; fi
 
