ocl: minor update and prettify (#634)
* Print compiler version when performing static analysis.
* Improved handling failures.
* Updated LIBXSMM (Daint-CI).
* Prettify.

--- a/opencl/Makefile
+++ b/opencl/Makefile
@@ -101,6 +101,7 @@ ifneq (0,$(DEV))
     else
       CC := $(CXX)
     endif
+    $(info CC: $(shell $(CC) --version | head -n1))
     OMP := 0
   endif
   CFLAGS += -pedantic
