ocl: adjustments in anticipation of #647 (#648)
* Added c_calculate_norms prototype to ACC/LIBSMM interface/header.
* Stub implementation for OpenCL.

* Adjusted rules to compile calculate_norms.cpp as CUDA translation unit.
* Separated CFLAGS and DFLAGS. Allow unsupported host-compiler (nvcc).
* Makefile/OpenCL: improved warning level.

* Fixed potential warnings about dereferencing type-punned pointer will break strict-aliasing rules.

--- a/opencl/Makefile
+++ b/opencl/Makefile
@@ -97,10 +97,14 @@ ifneq (0,$(DEV))
     # DEV=2 (and higher): linking is not intended
     CFLAGS += -D__DBCSR_ACC
     CFLAGS += -Wno-deprecated -Werror
-    ifneq (,$(findstring clang,$(CC) $(CXX)))
-      override CC := clang++ --analyze
+    ifneq (2,$(DEV))
+      ifneq (,$(findstring clang,$(CC) $(CXX)))
+        override CC := clang++ --analyze
+      else
+        CC := $(CXX) -xc++
+      endif
     else
-      CC := $(CXX)
+      CC := $(CXX) -xc++
     endif
     $(info CC: $(shell $(CC) --version | head -n1))
     OMP := 0
