ocl: prepared OpenCL backend for CP2K's Offload/DBM/DBT libraries
* Introduced ACC_OPENCL_MEM_DEBUG for some debug details.
* Auto-detecting device-memory offset (ACC_OPENCL_MEM_OFFSET), i.e.,
  range-finding device pointers to adjust the offset accordingly.
  - c_dbcsr_acc_memcpy_d2d, c_dbcsr_acc_memcpy_h2d,
  - c_dbcsr_acc_memcpy_d2h, c_dbcsr_acc_opencl_memset.
* Resolved cast-qual warnings.
* Removed ACC_OPENCL_MEM_NOALLOC/ACC_OPENCL_MEM macros.
* Improved performance when using clEnqueueFillBuffer.
* Allow stream-argument (ACC-interface) to be NULL
  - Introduced c_dbcsr_acc_opencl_stream_default().
  - Implemented ACC_OPENCL_STREAM_NULL.
  - Enables synchronous operation).
* Exposed/implemented OpenCL-only c_dbcsr_acc_opencl_memset,
  and based c_dbcsr_acc_memset_zero on c_dbcsr_acc_opencl_memset.
  - Allow custom memset-value to match CP2K's offload library
* Adjusted console output (ACC_OPENCL_VERBOSE).
* Revised acc_opencl.sh (generating kernel header).
* Increased number of repetitions of standalone benchmark.
* Updated tuned parameters.

--- a/opencl/Makefile
+++ b/opencl/Makefile
@@ -61,7 +61,7 @@ endif
 endif
 
 CFLAGS := -fPIC \
-  -Wall -Wextra \
+  -Wall -Wextra -Wcast-qual \
   -Wno-overlength-strings \
   -Wno-variadic-macros \
   -Wno-unused-function \
@@ -299,7 +299,7 @@ endif
 	fi
 
 $(MAKDIR)/smm/opencl_kernels.h: $(MAKDIR)/acc_opencl.sh $(KERNEL) $(PARAMS)
-	@CPPFLAGS=$(CPP_OPENCL_FLAGS) $(MAKDIR)/acc_opencl.sh $(KERNEL) $(PARAMS) $@
+	CPPFLAGS=$(CPP_OPENCL_FLAGS) $(MAKDIR)/acc_opencl.sh $(KERNEL) $(PARAMS) $@
 
 .PHONY: backend
 backend: $(ACCDIR)/dbcsr_acc.a
