ocl: pointer-arithmetic for device-pointers
* Implemented pointer-arithmetic for device-pointers using Intel's USM as well as fallback code.
* Fallback to main-thread's stream (c_dbcsr_acc_opencl_stream_default).
* Fixed c_dbcsr_acc_opencl_stream_default and reduce one level of indirection.
* Account for an apparent bug or accuracy issue with AL=1.
* Turned assertion into runtime error (set_active_device).
* Improved finding OpenCL header file.
* Reworked entire memory allocation (determining offsets).
* Consolidated compile-time decisions about LIBXSMM_VERSION_NUMBER.
* Removed runtime decisions accounting for pooled allocations.
* Removed support for performance estimation and suitability.
* Support older LIBXSMM (pooled memory allocations).
* Set ACC_OPENCL_ATOMIC_KIND to sequentially consistent; set ACC_OPENCL_NLOCKS=1.
* Complemented ACC_OPENCL_NLOCKS with environment variable.
* Introduced ACC_OPENCL_OMPLOCKS, ACC_OPENCL_MEM_DEBUG, ACC_OPENCL_EVENT_FLUSH.
* Implemented behavior of c_dbcsr_acc_opencl_stream_default already in c_dbcsr_acc_opencl_stream.
* Cache active device-ID to avoid determining context/properties (c_dbcsr_acc_set_active_device).
* Support event chain (dependency), improved handling errors (c_dbcsr_acc_stream_wait_event).
* Support event chain (dependency), improved handling errors (c_dbcsr_acc_event_record).
* Introduced lock-arguments (internal, e.g., c_dbcsr_acc_opencl_set_active_device).
* Consolidated domain-locks into c_dbcsr_acc_opencl_config.
* Made build-log available (c_dbcsr_acc_opencl_kernel).
* Reworked stream-registry and stream-info facility.
* Consolidated tuned parameters, and updated tuned parameters.
* Use "int" instead of "cl_int" when taking the return-code.
* Consistently use EXIT_SUCCESS instead of CL_SUCCESS.
* Removed support for ACC_OPENCL_OVERMALLOC.
* Removed support for per-thread device.
* Removed ACC_OPENCL_EVENT_BARRIER.
* Introduced ACC_OPENCL_MEM_TLS (disabled).
* Simplified c_dbcsr_acc_opencl_memset.
* Suppo

--- a/opencl/Makefile
+++ b/opencl/Makefile
@@ -136,7 +136,7 @@ ifneq (0,$(DBG))
     CFLAGS += -O0
   endif
 else
-  CFLAGS += -O2 -DNDEBUG -DNDBGDEV
+  CFLAGS += -O2 -DNDEBUG
   SYM := 0
 endif
 ifneq (0,$(SYM))
@@ -199,15 +199,19 @@ else
     CUDA_LIBDIR := $(if $(wildcard $(CUDATOOLKIT_HOME)/lib64),lib64,lib)
     ifeq (,$(wildcard $(OPENCL_INC)))
       CLINC := $(strip $(lastword $(sort $(wildcard $(CUDATOOLKIT_HOME)/../cuda/*/targets/x86_64-linux/include/CL/cl.h))))
-      ifneq (,$(CLINC))
-        OPENCL_INC := $(abspath $(dir $(CLINC))/..)
-      else
-        CFLAGS += -I$(CUDATOOLKIT_HOME)/include
-      endif
+      OPENCL_INC := $(if $(CLINC),$(abspath $(dir $(CLINC))/..),$(CUDATOOLKIT_HOME)/include)
     endif
     ifeq (,$(wildcard $(OPENCL_LIB)))
       LDFLAGS += -L$(CUDATOOLKIT_HOME)/$(CUDA_LIBDIR)
       LDFLAGS += -Wl,-rpath=$(CUDATOOLKIT_HOME)/$(CUDA_LIBDIR)
+    endif
+  else ifeq (,$(OPENCL_INC))
+    ifneq (,$(wildcard $(OPENCL_ROOT)/include/CL/cl.h))
+      OPENCL_INC := $(OPENCL_ROOT)/include
+      LDFLAGS += -L$(OPENCL_ROOT)/lib64
+    else ifneq (,$(wildcard $(OCL_ROOT)/include/CL/cl.h))
+      OPENCL_INC := $(OCL_ROOT)/include
+      LDFLAGS += -L$(OCL_ROOT)/lib64
     endif
   endif
   # OPENCL_INC: directory containing CL/cl.h.
