ocl: updated tuned parameters and script fixes/improvements
- Updated tuned parameters.
- Improved MPI-support, and improved balancing work (tune_multiply).
- Fixed checking/validating performance, fixed merging JSONs.
- Extended verification to performance (geometric mean).
- Support MNKs directly instead of only triplet-spec.
- Removed colorama, and support for mergeid, etc.
- Improved finding OpenCL header file (Makefile).

--- a/opencl/Makefile
+++ b/opencl/Makefile
@@ -184,7 +184,7 @@ else
   ifneq (,$(CUDATOOLKIT_HOME))
     CUDA_LIBDIR := $(if $(wildcard $(CUDATOOLKIT_HOME)/lib64),lib64,lib)
     ifeq (,$(wildcard $(OPENCL_INC)))
-      CLINC := $(strip $(lastword $(sort $(wildcard $(CUDATOOLKIT_HOME)/../cuda/*/targets/x86_64-linux/include/CL/cl.h))))
+      CLINC := $(lastword $(sort $(wildcard $(CUDATOOLKIT_HOME)/../cuda/*/targets/x86_64-linux/include/CL/cl.h)))
       OPENCL_INC := $(if $(CLINC),$(abspath $(dir $(CLINC))/..),$(CUDATOOLKIT_HOME)/include)
     endif
     ifeq (,$(wildcard $(OPENCL_LIB)))
@@ -197,10 +197,11 @@ else
       OPENCL_INC := $(OPENCL_ROOT)/include
     else ifneq (,$(ICX))
       OPENCL_ROOT := $(abspath $(dir $(ICX))/..)
-      ifneq (,$(wildcard $(OPENCL_ROOT)/include/sycl/CL/cl.h))
+      CLINC := $(wildcard $(OPENCL_ROOT)/include/sycl/CL/cl.h $(OPENCL_ROOT)/include/CL/cl.h)
+      ifneq (,$(CLINC))
         LDFLAGS += -L$(OPENCL_ROOT)/$(if $(wildcard $(OPENCL_ROOT)/lib64),lib64,lib)
         LDFLAGS += -L$(OPENCL_ROOT)/compiler/lib/intel64 -lintlc
-        OPENCL_INC := $(OPENCL_ROOT)/include/sycl
+        OPENCL_INC := $(abspath $(dir $(firstword $(CLINC)))/..)
       endif
     endif
   endif
