ACC: install interface
- General: acc/acc.h acc/acc_bench.h acc/acc_libsmm.h
- OpenCL: acc/opencl/acc_opencl.h

--- a/opencl/smm/CMakeLists.txt
+++ b/opencl/smm/CMakeLists.txt
@@ -1,8 +1,3 @@
-set(DBCSR_OPENCL_KERNELS_INC ${CMAKE_CURRENT_SOURCE_DIR}/opencl_kernels.h)
-
-set(DBCSR_OPENCL_KERNELS kernels/multiply.cl kernels/transpose.cl)
-list(TRANSFORM DBCSR_OPENCL_KERNELS PREPEND ${CMAKE_CURRENT_SOURCE_DIR}/)
-
 set(DBCSR_OPENCL_PARAMS_WITHGPU
     ${CMAKE_CURRENT_SOURCE_DIR}/params/tune_multiply_${WITH_GPU}.csv)
 set(DBCSR_OPENCL_PARAMS_CUSTOM ${CMAKE_CURRENT_SOURCE_DIR}/tune_multiply.csv)
@@ -22,12 +17,20 @@ else ()
 endif ()
 message(STATUS ${DBCSR_OPENCL_SCRIPT_MSG})
 
+set(DBCSR_OPENCL_KERNELS kernels/multiply.cl kernels/transpose.cl)
+list(TRANSFORM DBCSR_OPENCL_KERNELS PREPEND ${CMAKE_CURRENT_SOURCE_DIR}/)
+
+list(APPEND DBCSR_OPENCL_DEPENDS ${DBCSR_ACC_HEADER} ${DBCSR_OPENCL_COMMON})
+list(TRANSFORM DBCSR_OPENCL_DEPENDS PREPEND ${DBCSR_SOURCE_DIR}/)
+
+set(DBCSR_OPENCL_KERNELS_INC ${CMAKE_CURRENT_SOURCE_DIR}/opencl_kernels.h)
+
 add_custom_target(
   parameters # ALL
   COMMAND
     ${DBCSR_OPENCL_SCRIPT} ${DBCSR_OPENCL_SCRIPT_ARGS} ${DBCSR_OPENCL_KERNELS}
     ${DBCSR_OPENCL_PARAMS} ${DBCSR_OPENCL_KERNELS_INC}
-  DEPENDS ${DBCSR_OPENCL_SCRIPT} ${DBCSR_OPENCL_KERNELS} ${DBCSR_OPENCL_COMMON}
+  DEPENDS ${DBCSR_OPENCL_SCRIPT} ${DBCSR_OPENCL_KERNELS} ${DBCSR_OPENCL_DEPENDS}
   BYPRODUCTS ${DBCSR_OPENCL_KERNELS_INC}
   COMMENT ${DBCSR_OPENCL_SCRIPT_MSG})
 
