--- a/opencl/smm/CMakeLists.txt
+++ b/opencl/smm/CMakeLists.txt
@@ -25,15 +25,15 @@ list(TRANSFORM DBCSR_OPENCL_DEPENDS PREPEND ${DBCSR_SOURCE_DIR}/)
 
 set(DBCSR_OPENCL_KERNELS_INC ${CMAKE_CURRENT_SOURCE_DIR}/opencl_kernels.h)
 
-add_custom_target(
-  parameters # ALL
+add_custom_command(
   COMMAND
     ${DBCSR_OPENCL_SCRIPT} ${DBCSR_OPENCL_SCRIPT_ARGS} ${DBCSR_OPENCL_KERNELS}
     ${DBCSR_OPENCL_PARAMS} ${DBCSR_OPENCL_KERNELS_INC}
-  DEPENDS ${DBCSR_OPENCL_SCRIPT} ${DBCSR_OPENCL_KERNELS} ${DBCSR_OPENCL_DEPENDS}
-  BYPRODUCTS ${DBCSR_OPENCL_KERNELS_INC}
+  DEPENDS
+    ${DBCSR_OPENCL_DEPENDS} ${DBCSR_OPENCL_KERNELS}
+    ${DBCSR_OPENCL_SCRIPT} ${DBCSR_OPENCL_PARAMS}
+  OUTPUT ${DBCSR_OPENCL_KERNELS_INC}
   COMMENT ${DBCSR_OPENCL_SCRIPT_MSG})
 
-add_dependencies(dbcsr parameters)
 target_include_directories(dbcsr PRIVATE ${CMAKE_CURRENT_BINARY_DIR}
                                          ${CMAKE_CURRENT_SOURCE_DIR})
