ACC/OCL: revised files to be installed
- Use add_custom_command instead of add_custom_target.
- Added/fixed dependencies (custom build step).
- Avoid regenerating code.

--- a/opencl/smm/CMakeLists.txt
+++ b/opencl/smm/CMakeLists.txt
@@ -23,17 +23,20 @@ list(TRANSFORM DBCSR_OPENCL_KERNELS PREPEND ${CMAKE_CURRENT_SOURCE_DIR}/)
 list(APPEND DBCSR_OPENCL_DEPENDS ${DBCSR_ACC_HEADER} ${DBCSR_OPENCL_COMMON})
 list(TRANSFORM DBCSR_OPENCL_DEPENDS PREPEND ${DBCSR_SOURCE_DIR}/)
 
-set(DBCSR_OPENCL_KERNELS_INC ${CMAKE_CURRENT_SOURCE_DIR}/opencl_kernels.h)
+set(DBCSR_OPENCL_KHEADER opencl_kernels.h)
 
-add_custom_target(
-  parameters # ALL
+add_custom_command(
   COMMAND
     ${DBCSR_OPENCL_SCRIPT} ${DBCSR_OPENCL_SCRIPT_ARGS} ${DBCSR_OPENCL_KERNELS}
-    ${DBCSR_OPENCL_PARAMS} ${DBCSR_OPENCL_KERNELS_INC}
-  DEPENDS ${DBCSR_OPENCL_SCRIPT} ${DBCSR_OPENCL_KERNELS} ${DBCSR_OPENCL_DEPENDS}
-  BYPRODUCTS ${DBCSR_OPENCL_KERNELS_INC}
+    ${DBCSR_OPENCL_PARAMS} ${CMAKE_CURRENT_SOURCE_DIR}/${DBCSR_OPENCL_KHEADER}
+  DEPENDS ${DBCSR_OPENCL_DEPENDS} ${DBCSR_OPENCL_KERNELS} ${DBCSR_OPENCL_SCRIPT}
+          ${DBCSR_OPENCL_PARAMS}
+  OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/${DBCSR_OPENCL_KHEADER}
   COMMENT ${DBCSR_OPENCL_SCRIPT_MSG})
 
-add_dependencies(dbcsr parameters)
+add_custom_target(${DBCSR_OPENCL_KHEADER}
+                  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/${DBCSR_OPENCL_KHEADER})
+add_dependencies(dbcsr ${DBCSR_OPENCL_KHEADER})
+
 target_include_directories(dbcsr PRIVATE ${CMAKE_CURRENT_BINARY_DIR}
                                          ${CMAKE_CURRENT_SOURCE_DIR})
